Google Geocode API. Searching and getting details of a location from google maps api

--- a/slideshow/slideshow.html
+++ b/slideshow/slideshow.html
@@ -28,7 +28,7 @@
             }else{
                 i=0;
             }
-            setTimeout('cngImg()',time(2));
+            setTimeout('cngImg()',time);
         }
 
         window.onload = cngImg;
