Changed the header

--- a/Filterable List/index.html
+++ b/Filterable List/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1 class="center-align">
-            My Contracts
+            Football Club
         </h1>
         <input type="text" id="filterInput" placeholder="Search names ......">
         <ul id="names" class="collection with-header">
