--- a/Youtube-API-vanilla-js/index.html
+++ b/Youtube-API-vanilla-js/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Youtube Data Visulization</title>
-    <link rel="stylesheet" href="/semantic.min.css">
+    <link rel="stylesheet" href="semantic.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -22,13 +22,14 @@
     <br>
     <section>
         <div class="ui container">
-            <p></p>
+            <!-- <p></p> -->
             <button class="ui button large violet" id="authroize-button">Log In</button>
             <button class="ui button large violet" id="signout-button">Sign Out</button>
             <br>
             <br>
             <br>
             <br>
+            <!-- hello -->
             <br>
             <div id="content">
                 <div class="ui grid">
@@ -46,6 +47,9 @@
                             </form>
                         </div>
                     </div>
+                    <div class="doubling two column row" id="video-container">
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -54,6 +58,7 @@
 
     <script src="jquery.min.js"></script>
     <script src="semantic.min.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
