--- a/Youtube-API-vanilla-js/index.html
+++ b/Youtube-API-vanilla-js/index.html
@@ -56,9 +56,20 @@
     </section>
 
 
+
+    <script src="https://apis.google.com/js/api.js"></script>
     <script src="jquery.min.js"></script>
     <script src="semantic.min.js"></script>
     <script src="main.js"></script>
+
+
+
+    <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()" onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
+
+    <!-- INSTAD OF -->
+    <!-- <button onclick="authenticate().then(loadClient)">authorize and load</button> -->
+    <!-- <button onclick="execute()">execute</button> -->
 </body>
 
 </html>
