Data Binding/ Joins

--- a/tutorial-3/index.html
+++ b/tutorial-3/index.html
@@ -17,13 +17,7 @@
     <!-- https://www.youtube.com/watch?v=TOJ9yjvlapY -->
 
     <div class="container">
-        <div class="ddd my-3"></div>
-        <br>
-        <h4 class="h4">Bar chart</h4>
-        <div class="bar-chart my-3"></div>
-        <br>
-        <h4 class="h4">Working with SVG</h4>
-        <svg class="svg-chart"></svg>
+        <ul class="list-group" id="country-data"></ul>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
