--- a/tutorial-4/index.html
+++ b/tutorial-4/index.html
@@ -62,12 +62,12 @@
 
     <div class="container">
       <br><br>
-      <div id="app">
+      <div id="app" class="d-flex justify-content-between">
         <div id="chart">
           <svg class="chart-svg shadow border border-info"></svg>
         </div>
-        <div class="data">
-          <ul></ul>
+        <div class="data" id="data">
+          <ul class="list-group text-uppercase" ></ul>
         </div>
       </div>
     </div>
