problem with version - code is working on version 4 of d3

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
   <h3>This is only for redirect</h3>
   <a href="/tutorial-5/index.html">Simulation</a>
+  <a href="/tutorial-6/index.html">General Update pattern</a>
+  <a href="/tutorial-7/index.html">Force Layout</a>
 </body>
 
 </html>
