parsing csv data. another way

--- a/data-visualization/fetch-data/index.html
+++ b/data-visualization/fetch-data/index.html
@@ -19,6 +19,9 @@
             <a href="#" class="item">Contact</a>
         </div>
     </div>
+    <div class="ui container">
+        <div class="ui message blue" id="message"></div>
+    </div>
     <svg width="920" height="500"></svg>
 
 
